# okafka

./: .ocamlinit  Makefile  README.md  dune-project  okafka.opam
docker/: Dockerfile.build  Makefile
src/: bytes.ml  client.ml  conn.ml  conn.mli  dune  jbuild  lib.ml  okafka.ml  producer.ml  producer.mli  proto.ml  protocol.ml  protocol.mli  request.ml  request.mli
src/codec/: decoder.ml  decoder.mli  dune  encoder.ml  encoder.mli  jbuild
src/lib/: bytes.ml  dune  jbuild  lib.ml  lsm.ml  lsm.mli
src/proto/: dune  jbuild  proto.ml  req.ml  req.mli  resp.ml  resp.mli
